# PythontoWordResume

./: .gitignore  README.md  activate.sh  points.yaml  prompt_generator.py  pyproject.toml  script.py
resume_builder/: __init__.py  cli.py  prompt_generator.py  yaml_docx.py
resume_builder/templates/: points.yaml  prompt.txt
